# Aletheia

./: .env.example  .gitignore  AGENTS.md  BETA_IMPLEMENTATION_ROADMAP.md  BETA_READINESS_REPORT.md  BETA_RELEASE_CHECKLIST.md  CHANGELOG_V7.md  KB-state.md  README.md  app.config.ts  app.json  design.md  eas.json  global.css  metro.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  theme.config.d.ts  theme.config.js  todo.md  tsconfig.json  vitest.config.ts
.maestro/: ai-interpretation-real-device.yaml  onboarding-flow.yaml  onboarding-subflow.yaml  reading-flow.yaml  smoke-test-active-app.yaml  smoke-test.yaml
app/: _layout.tsx
components/: ai-trust-sheet.tsx  ambient-backdrop.tsx  crisis-response-modal.tsx  emotion-tag.tsx  error-boundary.tsx  film-grain.tsx  gateway-reveal.tsx  glass-card.tsx  haptic-tab.tsx  inference-mode-badge.tsx  local-model-manager.tsx  onboarding-passage-preview.tsx  onboarding-progress.tsx  ornate-corners.tsx  pressable-card.tsx  ritual-ornament.tsx  screen-container.tsx  skeleton.tsx  streak-badge.tsx  themed-view.tsx  toast.tsx  typewriter-text.tsx
constants/: oauth.ts
core/: Cargo.toml  aletheia.udl  build.rs  clippy.toml  uniffi.toml
core/content/: bundled-content.json
core/src/: ai_client.rs  aletheia.udl  card_gen.rs  contracts.rs  errors.rs  gift_client.rs  lib.rs  local_inference.rs  notif.rs  reading.rs  store.rs  theme.rs
docs/: ADR.md  BETA_IMPLEMENTATION_ROADMAP.md  BETA_RELEASE_CHECKLIST.md  BLUEPRINT.md  CONTENT_PROVENANCE.md  CONTRACTS.md  CYCLE_1_CORE_CONVERGENCE_PLAN.md  CYCLE_2_LOCAL_AI_PLAN.md  CYCLE_4_AUDIT_REVIEW.md  E2E_ANDROID_SETUP.md  GET_MODEL_GUIDE.md  KB-state.md  MODEL_QUANTIZATION.md  PROMPT_CONTRACT.md  README.md  VHEATM 5.0 Knowledge Base — Project Aletheia.md  p1-rui-ro-cao-nhung.md  todo.md
drizzle/: schema.ts
hooks/: use-auth.ts  use-layout.ts  use-local-model.ts  use-startup-guard.ts
lib/: analytics.ts  auth.ts  constants.ts  errors.ts  manus-runtime.ts  sentry-scrubber.ts  sentry.ts  theme-provider.tsx  theme.ts  trpc.ts  types.ts  validation.ts
playwright-report/: index.html
scripts/: android-real-device-smoke.sh  build-content-corpus.ts  build-internal-apk.sh  build-rust-android.sh  build-rust-ios.sh  build-rust-mobile.sh  build-so-only.sh  build-uniffi-bindings.sh  bundle-model-to-assets.sh  cleanup.sh  db-push-disabled.js  ensure-uniffi-bindgen.sh  generate-passages.py  install-maestro.sh  load-env.js  merge-passages.py  release-readiness-report.ts  setup-release-signing.sh  spec-lint.ts  sync-bundled-content.ts  sync-native-staging.cjs  sync-rust-types.js  sync-to-server.ts  sync-types.ts  upload-model-to-gcs.sh  validate-env.sh  verify-architecture.mjs
server/: README.md  db.ts  (+3 more)
(+212 files in other folders)
