[package]
name = "aletheia-core"
version = "1.0.0"
edition = "2021"
description = "Aletheia Rust Core - Offline-first reflection app"
license = "MIT"

[lib]
name = "aletheia_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
uniffi = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = { version = "0.8", features = ["std_rng"] }
once_cell = "1.19"

[build-dependencies]
uniffi_build = "0.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
